# djotfmt

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.dj  CONTRIBUTING.dj.license  CONTRIBUTING.md  Cargo.toml  README.dj  README.md  REUSE.toml  syntax.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
docs/: after_help.txt  long_about.txt
src/: cli.rs  fmt.rs  lib.rs  main.rs  renderer.rs
src/parser/: attributes.rs  block.rs  find.rs  inline.rs  mod.rs
src/tests/: mod.rs
tests/: CONTRIBUTING.in  README.in  add-blank-line-between-list-items.in  add-blank-line-between-list-items.out  aligning-multiple-lines-comment.in  aligning-multiple-lines-comment.out  aligning-multiple-lines-heading.in  aligning-multiple-lines-heading.out  block-attributes.in  block-attributes.out  cjk-text.in  cjk-text.out  code-block-edge.out  description-list.in  div-block.in  emphasis-no-braces.in  emphasis-no-braces.out  fmt_test.rs  footnote-advanced.in  footnote-advanced.out  footnote.in  footnote.out  handle-nest-attrs.in  handle-nest-attrs.out  hard-break.in  heading-same-line.in  heading-same-line.out  inline-attribute-stacking.in  inline-attribute-stacking.out  inline-formatting.in  inline-formatting.out  integration_test.rs  keep-code-block-content-as-it-is.in  keep-code-block-content-as-it-is.out  keep-comments.in  keep-comments.out  lazy-blockquote.in  lazy-blockquote.out  links-and-images.in  list-with-block-content.out  (+54 more)
tests/data/keep-comments/: expected.dj  input.dj
tests/data/references/: input.dj
tests/data/remove-extra-spaces/: expected.dj  input.dj
tests/heading/: expected.dj  input.dj
tests/keep-comments/: input.dj
tests/readme/: expected.dj  input.dj
tests/references/: expected.dj  input.dj
tests/remove-extra-spaces/: expected.dj  input.dj
