# SPDX-FileCopyrightText: 2026 Chen Linxuan <me@black-desk.cn>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "djotfmt"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[patch.crates-io]
jotdown = { path = 'third_party/jotdown' }

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colog = "1.4.0"
env_logger = "0.11.10"
jotdown = "0.9.1"
log = "0.4.29"
paste = "1.0.15"
pretty_assertions = "1.4.1"
roman = "0.1.6"
test_each_file = "0.3.7"
unicode-width = "0.2.2"
walkdir = "2.5.0"
