# SPDX-FileCopyrightText: 2026 Chen Linxuan <me@black-desk.cn>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "djotfmt"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colog = "1.4.0"
env_logger = "0.11.10"
log = "0.4.30"
regex = "1"
lazy_static = "1"
roman = "0.2.0"
unicode-width = "0.2.2"

[dev-dependencies]
glob = "0.3"
libtest-mimic = "0.8"
pretty_assertions = "1.4.1"
regex = "1"

[[test]]
name = "fmt_test"
harness = false

[[test]]
name = "parser_events_test"
harness = false
